--- a/FrontEnd/src/components/Data/Data.css
+++ b/FrontEnd/src/components/Data/Data.css
@@ -1,4 +1,4 @@
-.DriverHome {
+.dataHome {
     height: 93vh;
     display: flex;
     width: 100%;
@@ -6,7 +6,7 @@
     background-color: rgb(0, 0, 0);
 }
 
-.Drivercontainer {
+.datacontainer {
     display: flex;
     position: relative;
     flex-direction: row;
@@ -14,6 +14,7 @@
     height: 93vh;
     width: 100%;
     background-color: rgb(0, 0, 0);
+    overflow-x: auto;
 }
 
 .MainContent {
@@ -28,19 +29,21 @@
     margin-top: 14px;
     width: 80%;
     background-color: rgb(14, 70, 46);
-    border-radius: 40px
+    border-radius: 40px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.drivers-container {
+.data-containerr {
     position: relative;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 10px;
     width: 100%;
 }
 
-.driver-card {
+.data-card {
     background-color: rgba(255, 255, 255, 0.4);
     position: relative;
     border-radius: 20px;
@@ -48,14 +51,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding: 5px;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 20px;
+    margin-right: 10px;
     margin-bottom: 20px;
     margin-top: -1px;
 }
 
-.driver-image-container {
+.data-image-container {
     width: 100%;
     height: 100%;
     padding: 99px;
@@ -63,7 +65,7 @@
     display: contents;
 }
 
-.driver-image {
+.data-image {
     width: 200px;
     height: 200px;
     object-fit: cover;
@@ -78,7 +80,7 @@
     background-color: rgb(0, 0, 0);
 }
 
-.driver-info {
+.data-info {
     width: 100%;
     text-align: center;
     font-size: 20px;
@@ -87,17 +89,17 @@
     margin-top: 0px;
 }
 
-.driver-name {
+.data-name {
     font-weight: bold;
 }
 
-.driver-phone {
+.data-phone {
     font-style: italic;
 }
 
-.DriverSidebar {}
+.dataSidebar {}
 
-.DriverHeading {
+.dataHeading {
     align-items: center;
     text-align: center;
     margin-bottom: 1px;
